--- a/SharpAssembler.Formats.Elf32/Tests/SharpAssembler.Formats.Elf32.Tests.csproj
+++ b/SharpAssembler.Formats.Elf32/Tests/SharpAssembler.Formats.Elf32.Tests.csproj
@@ -13,6 +13,8 @@
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
