upgrade to sdk version

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,24 @@
 /SharpAssembler/Tests/bin/Debug
 /SharpAssembler/Source/obj/Debug
 /SharpAssembler/Source/bin/Debug
-/.vs/SharpAssembler
+/.vs/
 /packages/MSTest.TestFramework.2.2.10
+/SharpAssembler/Source/obj
+/SharpAssembler/Tests/obj
+/SharpAssembler/Tests.backup
+/SharpAssembler.Architectures.X86/Source/obj
+/SharpAssembler.Architectures.X86/Source.backup/bin/Debug
+/SharpAssembler.Architectures.X86/Source.backup
+/SharpAssembler.Architectures.X86/Tests.backup
+/SharpAssembler.Formats.Bin/Source/obj
+/SharpAssembler.Formats.Bin/Source.backup
+/SharpAssembler.Formats.Bin/Tests/obj
+/SharpAssembler.Formats.Bin/Tests.backup
+/SharpAssembler.Formats.Elf32/Source/obj
+/SharpAssembler.Formats.Elf32/Source.backup
+/SharpAssembler.Formats.Elf32/Tests/obj
+/SharpAssembler.Formats.Elf32/Tests.backup
+/SharpAssembler.Languages.Nasm/Source/obj
+/SharpAssembler.Languages.Nasm/Source.backup
+/SharpAssembler.Languages.Nasm/Tests/obj
+/SharpAssembler.Languages.Nasm/Tests.backup
