--- a/SharpAssembler/Source/SharpAssembler.csproj
+++ b/SharpAssembler/Source/SharpAssembler.csproj
@@ -1,28 +1,12 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DCE63BFB-2FFE-4396-97AB-95EE3685BE4C}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SharpAssembler</RootNamespace>
-    <AssemblyName>SharpAssembler</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
     <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
-    <TargetFrameworkProfile />
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -49,15 +33,8 @@
     <CodeContractsReferenceAssembly>DoNotBuild</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
     <DocumentationFile>bin\Debug\SharpAssembler.xml</DocumentationFile>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
     <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
@@ -92,82 +69,17 @@
     <CodeContractsSuggestEnsures>False</CodeContractsSuggestEnsures>
     <CodeContractsSuggestObjectInvariants>False</CodeContractsSuggestObjectInvariants>
     <CodeContractsDisjunctiveRequires>False</CodeContractsDisjunctiveRequires>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="AssemblerException.cs" />
-    <Compile Include="Constructable.cs" />
-    <Compile Include="ConstructableCollection.cs" />
-    <Compile Include="Context.cs" />
-    <Compile Include="Extra\BinaryWriterExtensions.cs" />
-    <Compile Include="Extra\NonClosingStreamWrapper.cs" />
-    <Compile Include="Instructions\CustomConstructable.cs" />
-    <Compile Include="Instructions\Group.cs" />
-    <Compile Include="Instructions\Define.cs" />
-    <Compile Include="Instructions\DeclareString.cs" />
-    <Compile Include="Instructions\Instruction.cs" />
-    <Compile Include="Int128.cs" />
-    <Compile Include="Extra\MathExt.cs" />
-    <Compile Include="Instructions\Align.cs" />
-    <Compile Include="Instructions\Comment.cs" />
-    <Compile Include="Instructions\DeclareData.cs" />
-    <Compile Include="Instructions\DeclareData`1.cs" />
-    <Compile Include="Instructions\ExpressionEmittable.cs" />
-    <Compile Include="Instructions\Extern.cs" />
-    <Compile Include="Instructions\Label.cs" />
-    <Compile Include="Instructions\LabelType.cs" />
-    <Compile Include="Instructions\RawEmittable.cs" />
-    <Compile Include="DataSize.cs" />
-    <Compile Include="IAnnotatable.cs" />
-    <Compile Include="IArchitecture.cs" />
-    <Compile Include="IEmittable.cs" />
-    <Compile Include="IFile.cs" />
-    <Compile Include="IObjectFileAssembler.cs" />
-    <Compile Include="IObjectFileVisitable.cs" />
-    <Compile Include="IObjectFileVisitor.cs" />
-    <Compile Include="Languages\ILanguage.cs" />
-    <Compile Include="Languages\IIndented.cs" />
-    <Compile Include="Languages\Language.cs" />
-    <Compile Include="Languages\LanguageException.cs" />
-    <Compile Include="ObjectFile.cs" />
-    <Compile Include="ObjectFileFeature.cs" />
-    <Compile Include="IObjectFileFormat.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SectionCollection.cs" />
-    <Compile Include="SectionFactory.cs" />
-    <Compile Include="SimpleExpression.cs" />
-    <Compile Include="Symbols\Reference.cs" />
-    <Compile Include="Section.cs" />
-    <Compile Include="SectionFlags.cs" />
-    <Compile Include="SectionType.cs" />
-    <Compile Include="Symbols\IAssociatable.cs" />
-    <Compile Include="Symbols\IIdentifiable.cs" />
-    <Compile Include="Symbols\Relocation.cs" />
-    <Compile Include="Symbols\RelocationType.cs" />
-    <Compile Include="Symbols\Symbol.cs" />
-    <Compile Include="Symbols\SymbolTable.cs" />
-    <Compile Include="Symbols\SymbolType.cs" />
-  </ItemGroup>
   <ItemGroup>
     <Content Include="Changes.txt" />
     <Content Include="Copyright.txt" />
     <Content Include="License.txt" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.3.330701">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+  </ItemGroup>
 </Project>
